--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name Build doc
+      - name: Build doc
         run: uv run -- poe doc-build
 
       - name: Upload static files as artifact
