--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "jinja2>=3.1.6",
     "requests>=2.32.5",
 ]
+license="Apache-2.0"
+license-files=["LICEN[CS]E*"]
 
 [dependency-groups]
 dev = [
@@ -16,6 +18,10 @@ dev = [
     "pytest-localserver>=0.10.0",
     "sphinx>=9.1.0",
 ]
+
+[build-system]
+requires = ["uv_build>=0.9.27,<0.10.0"]
+build-backend = "uv_build"
 
 [tool.poe.tasks.test]
 help = "Run unit tests"
